docs: add new api

--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -257,7 +257,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer E86cZPvaa45ebk63hf1dVDg'
+      - 'Bearer E85baZa436fve61cDhgVkPd'
     controller: null
     method: null
     route: null
@@ -320,7 +320,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: debitis
+        example: dolorem
         type: string
         enumValues: []
         custom: []
@@ -329,7 +329,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: debitis
+      search: dolorem
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -663,7 +663,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer eZEV6gk3bPDvf8dha5c1a64'
+      - 'Bearer ZaE6bDk86V3d41cgaveP5fh'
     controller: null
     method: null
     route: null
@@ -726,7 +726,7 @@ endpoints:
         name: search
         description: '검색어(승인번호, 계좌번호)'
         required: false
-        example: ut
+        example: culpa
         type: string
         enumValues: []
         custom: []
@@ -735,7 +735,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: ut
+      search: culpa
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -885,7 +885,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer c1aeEbDg5a6dV63vP8Z4fhk'
+      - 'Bearer dcPDgeh85k436Eav6bVaf1Z'
     controller: null
     method: null
     route: null
@@ -954,19 +954,169 @@ endpoints:
     fileParameters: []
     responses:
       -
-        status: 401
-        content: '{"code":950,"message":"로그인 정보가 정확하지 않습니다."}'
-        headers:
-          cache-control: 'no-cache, private'
-          content-type: application/json
-          vary: Origin
-        description: null
+        status: 201
+        content: |
+          {
+              "page": "1",
+              "page_size": "20",
+              "total": 6,
+              "content": [
+                  {
+                      "id": 31,
+                      "brand_id": 12,
+                      "mcht_id": 93632,
+                      "mcht_settle_id": 22981,
+                      "withdraw_amount": 1879000,
+                      "withdraw_date": "2023-11-22",
+                      "acct_num": "110373658934",
+                      "acct_name": "조현진",
+                      "acct_bank_name": "신한은행",
+                      "acct_bank_code": "088",
+                      "created_at": "2023-11-22 11:41:12",
+                      "updated_at": "2023-11-23 13:18:53",
+                      "mcht_name": "하나인테리어"
+                  },
+                  {
+                      "id": 30,
+                      "brand_id": 12,
+                      "mcht_id": 93632,
+                      "mcht_settle_id": 22981,
+                      "withdraw_amount": 6473600,
+                      "withdraw_date": "2023-11-22",
+                      "acct_num": "110373658934",
+                      "acct_name": "조현진",
+                      "acct_bank_name": "신한은행",
+                      "acct_bank_code": "088",
+                      "created_at": "2023-11-22 11:39:32",
+                      "updated_at": "2023-11-23 13:18:53",
+                      "mcht_name": "하나인테리어"
+                  },
+                  {
+                      "id": 29,
+                      "brand_id": 12,
+                      "mcht_id": 93632,
+                      "mcht_settle_id": 22691,
+                      "withdraw_amount": 854400,
+                      "withdraw_date": "2023-11-22",
+                      "acct_num": "110373658934",
+                      "acct_name": "조현진",
+                      "acct_bank_name": "신한은행",
+                      "acct_bank_code": "088",
+                      "created_at": "2023-11-22 11:06:29",
+                      "updated_at": "2023-11-22 11:36:57",
+                      "mcht_name": "하나인테리어"
+                  },
+                  {
+                      "id": 26,
+                      "brand_id": 12,
+                      "mcht_id": 93632,
+                      "mcht_settle_id": 22691,
+                      "withdraw_amount": 2809600,
+                      "withdraw_date": "2023-11-22",
+                      "acct_num": "110373658934",
+                      "acct_name": "조현진",
+                      "acct_bank_name": "신한은행",
+                      "acct_bank_code": "088",
+                      "created_at": "2023-11-22 09:51:38",
+                      "updated_at": "2023-11-22 11:36:57",
+                      "mcht_name": "하나인테리어"
+                  },
+                  {
+                      "id": 23,
+                      "brand_id": 12,
+                      "mcht_id": 93632,
+                      "mcht_settle_id": 22691,
+                      "withdraw_amount": 2809600,
+                      "withdraw_date": "2023-11-21",
+                      "acct_num": "110373658934",
+                      "acct_name": "조현진",
+                      "acct_bank_name": "신한은행",
+                      "acct_bank_code": "088",
+                      "created_at": "2023-11-21 16:37:37",
+                      "updated_at": "2023-11-22 11:36:57",
+                      "mcht_name": "하나인테리어"
+                  },
+                  {
+                      "id": 21,
+                      "brand_id": 12,
+                      "mcht_id": 93632,
+                      "mcht_settle_id": 22691,
+                      "withdraw_amount": 4688600,
+                      "withdraw_date": "2023-11-21",
+                      "acct_num": "110373658934",
+                      "acct_name": "조현진",
+                      "acct_bank_name": "신한은행",
+                      "acct_bank_code": "088",
+                      "created_at": "2023-11-21 16:10:22",
+                      "updated_at": "2023-11-22 11:36:57",
+                      "mcht_name": "하나인테리어"
+                  }
+              ]
+          }
+        headers: []
+        description: ''
         custom: []
-    responseFields: []
+    responseFields:
+      content:
+        name: content
+        description: 결과
+        required: false
+        example: null
+        type: 'object[]'
+        enumValues: []
+        custom: []
+      'content.*.withdraw_amount':
+        name: 'content.*.withdraw_amount'
+        description: '출금신청 금액'
+        required: false
+        example: null
+        type: integer
+        enumValues: []
+        custom: []
+      'content.*.withdraw_date':
+        name: 'content.*.withdraw_date'
+        description: 출금신청일
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      'content.*.acct_num':
+        name: 'content.*.acct_num'
+        description: 계좌번호
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      'content.*.acct_name':
+        name: 'content.*.acct_name'
+        description: 예금주명
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      'content.*.acct_bank_name':
+        name: 'content.*.acct_bank_name'
+        description: 은행명
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      'content.*.acct_bank_code':
+        name: 'content.*.acct_bank_code'
+        description: 은행코드
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
     auth:
       - headers
       - Authorization
-      - 'Bearer h6e5gd4a6DaE1Zckf3PVv8b'
+      - 'Bearer Paa6gc4k8ehEd53VbDf6Z1v'
     controller: null
     method: null
     route: null
@@ -1019,7 +1169,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer abk8eDPah4fvgZEVc61653d'
+      - 'Bearer 6aDga41bheE5ZP8c3fvdVk6'
     controller: null
     method: null
     route: null
@@ -1081,7 +1231,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer VZ66aePv1bc5adE8fg3Dhk4'
+      - 'Bearer h5DP6b8k4acfa1Edg36evZV'
     controller: null
     method: null
     route: null
@@ -1352,7 +1502,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer vZVh3Pdc65f16ea4Dkag8bE'
+      - 'Bearer e6aacbv6PhEVD8kg4Z3d5f1'
     controller: null
     method: null
     route: null
