--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -135,7 +135,9 @@ endpoints:
                   "pay_year_amount": 3640000,
                   "pay_month_amount": 3640000,
                   "pay_day_amount": 1640000,
-                  "pay_able_amount":-2640000
+                  "pay_able_amount":-2640000,
+                  "is_pg_terminal": true,
+                  "terminal_id": 211
               },
               {
                   "id":5,
@@ -149,7 +151,9 @@ endpoints:
                   "pay_year_amount": 3640000,
                   "pay_month_amount": 3640000,
                   "pay_day_amount": 1640000,
-                  "pay_able_amount":-2640000
+                  "pay_able_amount":-2640000,
+                  "is_pg_terminal": true,
+                  "terminal_id": 22
               }    
           ]
         headers: []
@@ -255,7 +259,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 5ekc6fZ3gE4habdvVPaD681'
+      - 'Bearer Za8465cf6gPD3dveabVh1kE'
     controller: null
     method: null
     route: null
@@ -318,7 +322,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: eius
+        example: eveniet
         type: string
         enumValues: []
         custom: []
@@ -327,7 +331,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: eius
+      search: eveniet
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -661,7 +665,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer Eb61VgaZ6caDehdf84vk53P'
+      - 'Bearer PkZ4eb3gachdD586afV6v1E'
     controller: null
     method: null
     route: null
@@ -724,7 +728,7 @@ endpoints:
         name: search
         description: '검색어(승인번호, 계좌번호)'
         required: false
-        example: consequatur
+        example: fugit
         type: string
         enumValues: []
         custom: []
@@ -733,7 +737,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: consequatur
+      search: fugit
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -883,7 +887,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer b5ache6kdEZ8gfD631aVvP4'
+      - 'Bearer 5dech81EDvk6aPbaVZf634g'
     controller: null
     method: null
     route: null
@@ -1072,7 +1076,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 5dvkP6aZa463V1ec8fbghED'
+      - 'Bearer 6Ded5b8caaVgE1k6ZPfv3h4'
     controller: null
     method: null
     route: null
@@ -1125,7 +1129,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer Eebg4856a6kPhdVavfc31ZD'
+      - 'Bearer kgV5c636dh4afE8DaP1Zevb'
     controller: null
     method: null
     route: null
@@ -1187,7 +1191,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer bkgV386vaZ1dEe64fah5cPD'
+      - 'Bearer hacPkv31bef6aV684d5EgDZ'
     controller: null
     method: null
     route: null
@@ -1458,7 +1462,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer a1g4fdDEbP863ZV5ahckv6e'
+      - 'Bearer 6kcva6V5ePfhb3adZ4Dg18E'
     controller: null
     method: null
     route: null
