feat: docs update

--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -265,7 +265,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 4dbk1afhv86ea3ZPDVg6Ec5'
+      - 'Bearer 56adPhb3EVcaf481gvD6keZ'
     controller: null
     method: null
     route: null
@@ -328,7 +328,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: ut
+        example: nostrum
         type: string
         enumValues: []
         custom: []
@@ -337,7 +337,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: ut
+      search: nostrum
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -671,7 +671,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 1bvca5D6hkVdg6eZafPE384'
+      - 'Bearer hvaZaP53VEDc1g8b6e4fk6d'
     controller: null
     method: null
     route: null
@@ -734,7 +734,7 @@ endpoints:
         name: search
         description: '검색어(승인번호, 계좌번호)'
         required: false
-        example: nam
+        example: odit
         type: string
         enumValues: []
         custom: []
@@ -743,7 +743,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: nam
+      search: odit
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -893,7 +893,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer Dga4ZPd58ah6kEv36bcfV1e'
+      - 'Bearer 6aekh84dZ3g5Vcfva1bD6EP'
     controller: null
     method: null
     route: null
@@ -971,7 +971,7 @@ endpoints:
               "content": [
                   {
                       "withdraw_amount": 1879000,
-                      "withdraw_date": "2023-11-22",
+                      "created_at": "2023-11-22 03:12:12",
                       "acct_num": "110373658934",
                       "acct_name": "조현진",
                       "acct_bank_name": "신한은행",
@@ -979,7 +979,7 @@ endpoints:
                   },
                   {
                       "withdraw_amount": 6473600,
-                      "withdraw_date": "2023-11-22",
+                      "created_at": "2023-11-22 03:12:12",
                       "acct_num": "110373658934",
                       "acct_name": "조현진",
                       "acct_bank_name": "신한은행",
@@ -987,7 +987,7 @@ endpoints:
                   },
                   {
                       "withdraw_amount": 854400,
-                      "withdraw_date": "2023-11-22",
+                      "created_at": "2023-11-22 03:12:12",
                       "acct_num": "110373658934",
                       "acct_name": "조현진",
                       "acct_bank_name": "신한은행",
@@ -995,7 +995,7 @@ endpoints:
                   },
                   {
                       "withdraw_amount": 2809600,
-                      "withdraw_date": "2023-11-22",
+                      "created_at": "2023-11-22 03:12:12",
                       "acct_num": "110373658934",
                       "acct_name": "조현진",
                       "acct_bank_name": "신한은행",
@@ -1003,7 +1003,7 @@ endpoints:
                   },
                   {
                       "withdraw_amount": 2809600,
-                      "withdraw_date": "2023-11-21",
+                      "created_at": "2023-11-21 03:12:12",
                       "acct_num": "110373658934",
                       "acct_name": "조현진",
                       "acct_bank_name": "신한은행",
@@ -1011,7 +1011,7 @@ endpoints:
                   },
                   {
                       "withdraw_amount": 4688600,
-                      "withdraw_date": "2023-11-21",
+                      "created_at": "2023-11-21 03:12:12",
                       "acct_num": "110373658934",
                       "acct_name": "조현진",
                       "acct_bank_name": "신한은행",
@@ -1039,9 +1039,9 @@ endpoints:
         type: integer
         enumValues: []
         custom: []
-      'content.*.withdraw_date':
-        name: 'content.*.withdraw_date'
-        description: 출금신청일
+      'content.*.created_at':
+        name: 'content.*.created_at'
+        description: 출금신청시간
         required: false
         example: null
         type: string
@@ -1082,7 +1082,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer ak3Ed68b6cv45aheV1fZPgD'
+      - 'Bearer 5EPf6D4ge13h6vVZk8cbaad'
     controller: null
     method: null
     route: null
@@ -1135,7 +1135,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer ZD5fhabc81gvPk3edE6aV64'
+      - 'Bearer vP5f6E1hd6cDb34eakg8aZV'
     controller: null
     method: null
     route: null
@@ -1197,7 +1197,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer EZDdV8hbvack36465aPg1ef'
+      - 'Bearer a4D8eh6g6Eca3dPfvkbV5Z1'
     controller: null
     method: null
     route: null
@@ -1468,7 +1468,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 4v316PaEZaDVgk8db6fc5he'
+      - 'Bearer v8Z1fagke5664PbcDVadEh3'
     controller: null
     method: null
     route: null
